# schwab-client-py

./: .gitattributes  CHANGELOG.rst  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: _test.yml  lint.yml  poetry.yml  publish-pypi.yaml  release.yml  temp_publish_pypi.txt  validate.yaml  validate_branch.yaml
src/schwab-client/: auth.py  market_hours.py  version.py
src/schwab_client/: auth.py  client.py  config.py  market_hours.py  protocol.py  utils.py
src/schwab_client/options/: options.py
src/schwab_client/quotes/: quotes.py
src/schwabpy_api/: __init__.py  auth.py  client.py  config.py
src/schwabpy_api/options/: __init__.py
src/schwabpy_api/quotes/: __init__.py  endpoint.py  quotes.py
tests/: __init__.py
